added favicon and tab title; moved Docker-Files to Dir Docker; added docker build scripts

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,11 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
 <link rel="stylesheet" href="{{url_for('static', filename='index.css')}}" type="text/css" media="all">
 <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+<head>
+    <title>Home</title>
+    <link rel="icon" type="image/svg" href="/static/house-fill.svg">
+</head>
+
 <body class="bg-main">
     <!-- <h1 class="">Services</h1> -->
     {% include 'google_search.html' %}
